--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/danielgomesmateus/facerecognition#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "consign": "^0.1.6",
     "express": "^4.16.4",
+    "express-validator": "^5.3.0",
+    "face-recognition": "^0.9.3",
     "fs": "0.0.1-security",
     "helmet": "^3.14.0",
     "nodemon": "^1.18.4",
